# AIcoding_final_work

./: .gitignore  README.md
Task1/: AIHW1.py  README.md  README_training.md  train_cifar10.py  visualize_training.py  日志和可视化说明.md
Task2/: README.md  compare_parallel.py  data_parallel_train.py  model_parallel_train.py  简要说明.md
Task3/: README.md  accuracy_improvement_guide.md  report_template.md  train_cifar10.py  train_examples.md
Task3/core/: pyproject.toml  setup.py
Task3/core/include/: activations.h  layers.h  tensor.h  utils.h
Task3/core/mytensor/: __init__.py  data.py
Task3/core/src/: activations.cu  layers.cu  pybind_module.cpp  tensor.cu
Task3/core/tests/: test_ops.py
Task3/framework/: __init__.py  nn.py  ops.py  optim.py  tensor.py  utils.py
